# osw-python-package-generator

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
examples/: build_package.py
src/osw_python_package_generator/: __init__.py  main.py
